Initial project setup with core features
Added Eclipse and Maven configuration files, controllers, services, repositories, entities, and models for user, category, subcategory, product, and OTP management. Integrated AWS and Google Drive setup, SQL migration scripts, static resources, and templates for admin and user interfaces. Removed legacy cart-related files and updated existing classes to support new features such as hierarchical category management, OTP authentication, and product enhancements.